# emerge-rs

./: .gitignore  Cargo.toml
src/: actions.rs  atom.rs  bintree.rs  config.rs  dep.rs  dep_check.rs  depgraph.rs  doebuild.rs  ebuild_exec.rs  emerge_config.rs  exception.rs  lib.rs  license.rs  main.rs  mask.rs  merge.rs  news.rs  porttree.rs  profile.rs  sets.rs  util.rs  vartree.rs  versions.rs  world.rs  xml.rs  xpak.rs
src/ebuild/: archive.rs  bash_parser.rs  build_helpers.rs  build_system.rs  download.rs  eapi.rs  eclass.rs  environment.rs  helpers.rs  install_helpers.rs  mod.rs  native_phases.rs  phases.rs  portage_helpers.rs  src_uri.rs  use_helpers.rs  version.rs
src/sync/: controller.rs  mod.rs
src/sync/backends/: cvs.rs  git.rs  mercurial.rs  mod.rs  rsync.rs  svn.rs  webrsync.rs
src/util/: cpuinfo.rs  elf.rs  endian.rs  iterators.rs  path.rs  writeable_check.rs
src/xml/: metadata.rs
tests/: integration.rs
