[package]
name = "emerge-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
lazy_static = "1.4"
phf = { version = "0.11", features = ["macros"] }
quick-xml = "0.31"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
nix = { version = "0.27", features = ["user"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
pathdiff = "0.2"
